# django-personal-blog

./: .gitignore  README.md  pyproject.toml
blog_project/: requirements.txt
blog_project/blog_app/: admin.py  factories.py  urls.py
blog_project/blog_app/migrations/: 0001_initial.py  0002_comment.py
blog_project/blog_app/models/: comment.py
blog_project/blog_app/views/: post_view.py
blog_project/blog_project/: settings.py  urls.py
blog_project/templates/: base.html  index.html  post_detail.html  sidebar.html
blog_project/tests/models/: test_post.py
blog_project/tests/views/: test_post.py
