[tool.poetry]
name = "django-personal-blog"
version = "0.1.0"
description = "django-personal-blog"
authors = ["jose-uchoa <jooseuchoa@gmail.com>"]
readme = "README.md"
packages = [{include = "django_personal_blog"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
factory-boy = "^3.2.1"
Faker = "^19.0.0"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
crispy-bootstrap4 = "^2022.1"
django-crispy-forms = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
